tests/snapshots/golden_tests__compile_file__repeated_name_trucation.hvm.snap
---
source: tests/golden_tests.rs
expression: result
---
@1 = (* @3)
@3 = (* @1)
@main = (a b)
& (a b) ~ @1

