tests/snapshots/golden_tests__compile_file__snd.hvm.snap
---
source: tests/golden_tests.rs
expression: result
---
@main = a
& ([#0 #42] a) ~ @snd
@snd = ([* a] a)

