tests/snapshots/golden_tests__compile_file__spacing.hvm.snap
---
source: tests/golden_tests.rs
expression: result
---
@2 = (a a)
@main = ({2 a b} c)
& (b (a c)) ~ @2

