tests/snapshots/golden_tests__compile_file__spacing2.hvm.snap
---
source: tests/golden_tests.rs
expression: result
---
@2 = (a a)
@3 = (a a)
@main = a
& (@3 a) ~ @2

