tests/snapshots/golden_tests__compile_file__var_shadows_ref.hvm.snap
---
source: tests/golden_tests.rs
expression: result
---
@3 = (a a)
@a = (a a)
@main = a
& (@3 a) ~ @a

