tests/snapshots/golden_tests__compile_file__weekday.hvm.snap
---
source: tests/golden_tests.rs
expression: result
---
@9 = (a a)
@K = (a (* a))
@L = (* @K)
@M = (* @L)
@N = (* @M)
@O = (* @N)
@Satu = (* @O)
@main = a
& (@Satu a) ~ @9

